--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,6 +18,7 @@ justify-content: center;
 background: linear-gradient(135deg, #ff758c, #ff7eb3);
 font-family: Arial, sans-serif;
 overflow: hidden;
+position: relative;
 }
 
 .card {
@@ -29,6 +28,7 @@ border-radius: 15px;
 text-align: center;
 box-shadow: 0 10px 25px rgba(0,0,0,0.2);
 z-index: 2;
+position: relative;
 }
 
 h1 {
@@ -42,6 +42,8 @@ font-size: 18px;
 border: none;
 border-radius: 8px;
 cursor: pointer;
+position: relative;
+z-index: 2;
 }
 
 #yes {
@@ -53,7 +55,7 @@ margin-right: 15px;
 #no {
 background-color: #ccc;
 position: absolute;
-z-index: 1;
+z-index: 2;
 }
 
 .heart {
@@ -71,6 +73,24 @@ to {
 opacity: 0;
 transform: translateY(-300px);
 }
+}
+
+.overlay {
+position: fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+display:flex;
+justify-content:center;
+align-items:center;
+background: rgba(0,0,0,0.6);
+color: white;
+font-size: 32px;
+font-family: Arial;
+z-index: 5;
+text-align: center;
+padding: 20px;
 }
 </style>
 </head>
@@ -98,7 +118,7 @@ noBtn.style.left = x + "px";
 noBtn.style.top = y + "px";
 }
 
-// Desktop + mobile dodge
+// Mobile & desktop dodge
 noBtn.addEventListener("mouseover", moveNoButton);
 noBtn.addEventListener("touchstart", moveNoButton);
 noBtn.addEventListener("click", moveNoButton);
@@ -106,22 +126,7 @@ noBtn.addEventListener("click", moveNoButton);
 yesBtn.addEventListener("click", () => {
 music.play();
 launchHearts();
-
-document.body.innerHTML = `
-<div style="
-display:flex;
-align-items:center;
-justify-content:center;
-height:100vh;
-background: linear-gradient(135deg, #ff758c, #ff7eb3);
-color:white;
-font-family: Arial;
-text-align:center;
-font-size:32px;
-">
-<h1>I KNOW YOU WANT ME 😂❤️</h1>
-</div>
-`;
+showOverlay();
 });
 
 function launchHearts() {
@@ -138,6 +143,13 @@ setTimeout(() => {
 heart.remove();
 }, 4000);
 }
+}
+
+function showOverlay() {
+const overlay = document.createElement("div");
+overlay.className = "overlay";
+overlay.innerHTML = "I KNOW YOU WANT ME 😂❤️";
+document.body.appendChild(overlay);
 }
 </script>
 
